--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/ClientServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-lang3-3.10.jar=C:\\Users\\H\\Desktop\\NetworkProgramming\\commons-lang3-3.10\\commons-lang3-3.10.jar
 file.reference.sqljdbc4-2.0.jar=C:\\Users\\H\\Downloads\\sqljdbc4-2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc4-2.0.jar}
+    ${file.reference.sqljdbc4-2.0.jar}:\
+    ${file.reference.commons-lang3-3.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
